Adicionado link de inicializaçõao do exercício

--- a/conversor.html
+++ b/conversor.html
@@ -9,30 +9,38 @@
 </head>
 
 <body>
-    <h1> Exercicio 3 Java script </h1>
-    <h3>Referente a aula 22/23 *Onebitcode</h3>
-    <p> ## Conversor de Medidas <br>
+    <header>
+        <h1> Exercicio 3 Java script </h1>
+        <h3>Referente a aula 22/23 *Onebitcode</h3>
+    </header>
+    <section>
+        <p> ## Conversor de Medidas <br>
 
-        Escreva um programa em javascript que funcione como um conversos de medidas. O programa deverá pedir por um
-        valor em metros e então dar a opção de escolher para qual unidade de medida esse valor deve ser convertido. As
-        opções são: <br>
+            Escreva um programa em javascript que funcione como um conversos de medidas. O programa deverá pedir por um
+            valor em metros e então dar a opção de escolher para qual unidade de medida esse valor deve ser convertido.
+            <br>
+            As
+            opções são: <br>
 
-        - milímetro (mm) <br>
-        - centímetro (cm) <br>
-        - decímetro (dm) <br>
-        - decâmetro (dam) <br>
-        - hectômetro (hm) <br>
-        - quilômetro (km) <br>
+            - milímetro (mm) <br>
+            - centímetro (cm) <br>
+            - decímetro (dm) <br>
+            - decâmetro (dam) <br>
+            - hectômetro (hm) <br>
+            - quilômetro (km) <br>
 
-        O programa deve então converter a medida de acordo com a opção escolhida e exibir o resultado.
+            O programa deve então converter a medida de acordo com a opção escolhida e exibir o resultado.
 
-        O programa também deve exibir uma mensagem de “Opção inválida” caso o usuário insira uma opção diferente das
-        disponíveis (use o break e o default para isso)
+            O programa também deve exibir uma mensagem de “Opção inválida” caso o usuário insira uma opção diferente das
+            disponíveis (use o break e o default para isso)
 
+        </p>
+    </section>
 
-
-    </p>
-    <script src="./conversor.js "></script>
+    <footer>
+        <script src="./conversor.js "></script>
+        <a href="javascript:void(0);" onclick="exibirPromptAlert()">Clique aqui e vamos a execulção</a>
+    </footer>
 
 </body>
 
