Corrigir erro ortografia

--- a/conversor.html
+++ b/conversor.html
@@ -39,7 +39,7 @@
 
     <footer>
         <script src="./conversor.js "></script>
-        <a href="javascript:void(0);" onclick="exibirPromptAlert()">Clique aqui e vamos a execulção</a>
+        <a href="javascript:void(0);" onclick="exibirPromptAlert()">Clique aqui e vamos a execução</a>
     </footer>
 
 </body>
